--- a/example/conf.yml
+++ b/example/conf.yml
@@ -10,6 +10,8 @@ in:
     - { name: cell_d, type: long, pos: A5 }
     - { name: cell_e, type: double, pos: A5 }
     - { name: cell_f, type: timestamp, pos: A7, format: "%Y/%m/%d" }
+    - { name: cell_g, type: boolean, pos: A8 }
+    - { name: cell_h, type: boolean, pos: A7 }
 
 output:
   type: stdout
