Add Sheet selection

--- a/example/conf.yml
+++ b/example/conf.yml
@@ -11,7 +11,8 @@ in:
     - { name: cell_e, type: double, pos: A5 }
     - { name: cell_f, type: timestamp, pos: A7, format: "%Y/%m/%d" }
     - { name: cell_g, type: boolean, pos: A8 }
-    - { name: cell_h, type: boolean, pos: A7 }
+    - { name: cell_h, type: boolean, pos: A9 }
+    - { name: cell_i, type: string, pos: "Sheet2!A1" }
 
 output:
   type: stdout
